# time-checker

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  design.md
.claude/: CLAUDE.md
memo/: cargo-guide.md  source-code-guide.md
src/: cli.rs  completion.rs  data.rs  error.rs  lib.rs  main.rs  tracker.rs
tests/: cli_test.rs  data_test.rs  integration_test.rs  tracker_test.rs
