[package]
name = "time-checker"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
description = "A simple CLI tool for tracking work time"
readme = "README.md"
keywords = ["cli", "time-tracking", "productivity"]
categories = ["command-line-utilities"]

[[bin]]
name = "time-checker"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
